// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-jlyJG dMPRjC"
  >
    <div
      class="sc-uJMKN VhEfq"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-jlyJG dMPRjC"
  >
    <div
      class="sc-uJMKN VhEfq"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-kgoBCf eFYvIT"
  >
    <table
      class="sc-cHGsZl bjsZGf"
    >
      <tbody
        class="sc-TOsTZ iqFYue"
      >
        <tr
          class="sc-cJSrbW FvgNi"
        >
          <td
            class="sc-ksYbfQ gBfnAl"
          >
            Server version
          </td>
          <td
            class="sc-hmzhuo eRtqMp"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-cJSrbW FvgNi"
        >
          <td
            class="sc-ksYbfQ gBfnAl"
          >
            Server address
          </td>
          <td
            class="sc-hmzhuo eRtqMp"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-cJSrbW FvgNi"
        >
          <td
            class="sc-ksYbfQ gBfnAl"
          >
            Query
          </td>
          <td
            class="sc-hmzhuo eRtqMp"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-cJSrbW FvgNi"
        >
          <td
            class="sc-ksYbfQ gBfnAl"
          >
            Summary
            <div
              class="sc-kgAjT DtDq fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-hmzhuo eRtqMp"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-cJSrbW FvgNi"
        >
          <td
            class="sc-ksYbfQ gBfnAl"
          >
            Response
            <div
              class="sc-kgAjT DtDq fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-hmzhuo eRtqMp"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
